# mimimilli

./: .gitignore  .oxfmtrc.json  .oxlintrc.json  AGENTS.md  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.node.tsbuildinfo  vite.config.ts
backlog/: config.yml
client/: index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.node.json  vite.config.ts
design_handoff_mimimilli_library/: mimimilli-library.html
docs/: ARCHITECTURE.md  BACKLOG.md  (+11 more)
server/: Cargo.toml  package.json  tsconfig.json
server/src/: adapter.ts  app.ts  dlsite.rs  index.ts  service.rs
server/src/adapters/fixture/: data.ts  index.ts  media.ts  scenarios.ts
server/src/adapters/real/: db.ts  dlsite.ts  fileTree.ts  fsBrowse.ts  index.ts  meta.ts  paths.ts  probe.ts  scanner.ts  schema.ts  thumbnailCache.ts  workRepo.ts
server/src/core/: axisFacets.ts  smartFolder.ts  tagPrefixCandidates.ts  worksQuery.ts
server/src/handlers/: media.rs
server/src/lib/: httpError.ts
server/src/routes/: axes.ts  dlsite.ts  fs.ts  media.ts  presets.ts  scan.ts  scanProgress.ts  settings.ts  smartFolders.ts  tagPrefixes.ts  works.ts
server/tests/: app.test.ts  fixtureMedia.test.ts  fixtureScenarios.test.ts  scanProgress.test.ts  smartFolder.test.ts  tagPrefixes.test.ts  thumbnailWidth.test.ts  worksQuery.test.ts
server/tests/helpers/: sampleLibrary.ts  smoke.ts
server/tests/real/: dlsite.test.ts  fsBrowse.test.ts  media.test.ts  metaWriteback.test.ts  paths.test.ts  scanner.test.ts  tagPrefixSeed.test.ts  thumbnail.test.ts  thumbnailCache.test.ts
(+263 files in other folders)
