[package]
name = "mimikago-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mimikago-server"
path = "src/main.rs"

[dependencies]
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
walkdir = "2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "cookies", "rustls-tls"] }
scraper = "0.22"
mime_guess = "2"
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
tempfile = "3"
